Issue #SB-18685 fix: Course names are is not aligned properly in profile page when user selects urdu language

--- a/src/app/client/src/assets/styles/components/_certificate-trained.scss
+++ b/src/app/client/src/assets/styles/components/_certificate-trained.scss
@@ -84,16 +84,6 @@
   }
 }
 
-html[dir="rtl"] {
-  .sb-certificate-trained {
-    .list-item {
-      label {
-        text-align: right;
-      }
-    }
-  }
-}
-
 //OR text divider
 .sb-or-divider {
   color: var(--gray-200);
